<resources>
    <string name="app_name">vaccineCard</string>
    <string name="powered_by">Powered By</string>
    <string name="identification">Identification </string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="personal_details">Personal Details</string>
    <string name="id_types">ID Type : NIDA</string>
    <string name="id_numbers">ID Number : 10090301151080000389</string>
    <string name="last_name">Juma</string>
    <string name="middle_name">Hassan</string>
    <string name="first_name">Asha</string>
    <string name="gender">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="age">Age</string>
    <string name="region">Region</string>
    <string name="district">District</string>
    <string name="street">Street</string>
    <string name="email">Email address</string>
    <string name="firs_name_tag">First name</string>
    <string name="last_name_tag">Middle name</string>
    <string name="las_name_tag">Last name</string>
    <string name="gender_tag">Gender</string>
    <string name="tel">Mobile number</string>
    <string name="salamu">Salamu, </string>
    <string name="fullname">Asha Juma Hassan</string>
    <string name="vaccine">"Not yet vaccinated for covid 19, "</string>
    <string name="reschedule">Please schedule</string>
    <string name="city">City name</string>
    <string name="district_name">District name</string>
    <string name="street_name">Street name</string>
    <string name="hospital_name">Hospital name</string>
    <string name="schedule">Schedule</string>
    <string name="ids_type">Please select your ID type</string>
    <string name="ids_content">and fill your ID number</string>
    <string name="input_date">Input date</string>
    <string name="date">Pick Date</string>
    <string name="selected">Selected date</string>
    <string name="vaccination">Scheduling for COVID-19 Vaccination</string>
    <string name="dar">Dar Es Salaam</string>
    <string name="mwana">Mwananyamala</string>
    <string name="vacc">Vaccine center</string>
    <string name="mwana2">Mwananyamala Regional Referal Hospital</string>
    <string name="dose">Vaccine dose</string>
    <string name="jas">Janssen</string>
    <string name="dates">Saturday, 26th August, 2021</string>
    <string name="foter">**I am willing to receive COVID-19 vaccination, and I will not hold the
        Government of United Republic of Tanzania accountable for any adverse event that may
        happen after being vaccinated.</string>
    <string name="i_agree">I Agree</string>
    <string name="month_selector_title">Month</string>
    <string name="date_selector_title">Date</string>
    <string name="time_selector_title">Time</string>

    <string-array name="city_list">
        <item>Dar Es Salaam</item>
        <item>Arusha</item>
        <item>Dodoma</item>
        <item>Tanga</item>
        <item>Mwanza</item>
        <item>Kilimanjaro</item>
    </string-array>
</resources>