<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

        <LinearLayout
            android:id="@+id/topContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/landing_background"
            android:orientation="vertical"
            android:padding="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintLeft_toLeftOf="@id/guideline10"
            app:layout_constraintRight_toRightOf="@id/guideline11"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/personal_details"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:drawableEndCompat="@drawable/ic_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/id_types"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/ic_edit"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/id_numbers"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/midContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/guideline10"
            app:layout_constraintRight_toRightOf="@id/guideline11"
            app:layout_constraintTop_toBottomOf="@id/topContent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/firs_name_tag"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/midContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_middle_name"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_tag"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/extra3"
                    android:inputType="text"
                    android:padding="20dp"
                    android:text="@string/middle_name" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_last_name"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/las_name_tag"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_gender"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/gender_tag"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:text="@string/gender"
                    android:inputType="text"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_dob"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:drawableEnd="@drawable/ic_dob"
                    android:inputType="date"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_age"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_region"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/region"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_district"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/district"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_street"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_mobile_number"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/tel"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extra3"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:drawableEnd="@drawable/ic_tel"
                    android:padding="20dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_email"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/primary"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintLeft_toLeftOf="@id/guideline10"
                app:layout_constraintRight_toRightOf="@id/guideline11"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="200dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_next"
            android:textAllCaps="false"
            android:fontFamily="@font/extra3"
            android:backgroundTint="@color/primary"
            app:layout_constraintLeft_toLeftOf="@id/guideline10"
            app:layout_constraintRight_toRightOf="@id/guideline11"
            app:layout_constraintTop_toBottomOf="@id/midContent"
            app:layout_constraintBottom_toTopOf="@id/guideline13"
            android:textSize="18sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
